WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257379
InteractionRegions are missing for some `display: table` elements
https://bugs.webkit.org/show_bug.cgi?id=257379
Summary
InteractionRegions are missing for some `display: table` elements
Etienne
Reported
2023-05-26 07:15:04 PDT
InteractionRegions are missing for some `display: table` elements
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-05-26 07:22:46 PDT
<
rdar://problem/109538261
>
Etienne
Comment 2
2023-05-26 07:23:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14390
EWS
Comment 3
2023-05-26 11:53:26 PDT
Committed
264598@main
(fde1853a7a15): <
https://commits.webkit.org/264598@main
> Reviewed commits have been landed. Closing PR #14390 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug