InteractionRegions are missing for some `display: table` elements https://bugs.webkit.org/show_bug.cgi?id=257379 <rdar://109538261>

Reviewed by Tim Horton.

Don't skip the child renderer's InteractionRegion if the link parent is
`display: table`, like we do for inline links.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):
Check if the matched renderer `isDisplayTableOrTablePart()` before
bailing out.

* LayoutTests/interaction-region/display-table-expected.txt: Added.
* LayoutTests/interaction-region/display-table.html: Added.
Add a test.

* LayoutTests/interaction-region/layer-tree-expected.txt:
Test update.

Canonical link: https://commits.webkit.org/264598@main